--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!--caroussel-->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
@@ -105,6 +105,25 @@
         </a>
     </div>
     <!--fin caroussel -->
+
+    <!--section 1-->
+    <section class="section1">
+        <div class="container div1-section1">
+            <div class=" row div2-section1">
+                <div class="col-6">
+                    <img src="./images/box-left-top.png" alt="">
+                </div>
+                <div col-6>
+                    <img class="img-section1" src="./images/box-right-top.png" alt="">
+                </div>
+                <p>gang</p>
+                <p></p>
+            </div>
+            <div>
+
+            </div>
+        </div>
+    </section>
 
     <!--jquery-->
     <script src="./node_modules/jquery/dist/jquery.js"></script>
