--- a/index.html
+++ b/index.html
@@ -108,22 +108,129 @@
 
     <!--section 1-->
     <section class="section1">
-        <div class="container div1-section1">
-            <div class=" row div2-section1">
-                <div class="col-6">
-                    <img src="./images/box-left-top.png" alt="">
-                </div>
-                <div col-6>
-                    <img class="img-section1" src="./images/box-right-top.png" alt="">
-                </div>
-                <p>gang</p>
-                <p></p>
+        <div class="div1-section1">
+            <div class="d-flex div2-section1">
+                <img height="150px" src="./images/box-left-top.png" alt="">
+                <p class="p-section1"><span> our </span> story</p>
+                <img class="img-section1" height="150px" src="./images/box-right-top.png" alt="">
             </div>
             <div>
 
             </div>
         </div>
     </section>
+    <!--fin section 1-->
+
+    <!--section 2-->
+    <section class="section2">
+        <div class="d-flex div1-section2">
+            <div class="col-3">
+                <img class="img-section2" src="./images/chef1.png" alt="">
+                <p class="p-section2">lorem ipsum</p>
+            </div>
+            <div class="col-3">
+                <img class="img-section2" src="./images/chef2.png" alt="">
+                <p class="p-section2">lorem ipsum</p>
+            </div>
+            <div class="col-3">
+                <img class="img-section2" src="./images/chef3.png" alt="">
+                <p class="p-section2">lorem ipsum</p>
+            </div>
+            <div class="col-3">
+                <img class="img-section2" src="./images/chef4.png" alt="">
+                <p class="p-section2">lorem ipsum</p>
+            </div>
+        </div>
+    </section>
+    <!--fin section 2-->
+
+    <!--section 3-->
+    <section class="section3">
+        <div class="div1-section3">
+
+        </div>
+    </section>
+    <!--fin section 3-->
+
+    <!--section 4-->
+    <section class="d-flex section4">
+        <div>
+            <p class="p-section4"><span>client </span> testimonials</p>
+        </div>
+        <div class="div-section4 rounded bg-danger">
+            <h3></h3>
+            <h5></h5>
+            <h6></h6>
+        </div>
+        <div>
+
+        </div>
+    </section>
+    <!--fin section 4-->
+
+    <!--section 5-->
+    <section class="section5">
+        <div class="kustify-content-center">
+            <p class="p1-section5"><span> our </span> contact</p>
+        </div>
+        <div class="div1-section5 rounded">
+            <p class="p-section5">lorem lorem lorem lorem lorem lorem lorme lorem lorem lorem lorem lorem lorem lorem
+            </p>
+            <p class="p-section5">+91-9876543510</p>
+            <p class="p-section5">abc@abc.com</p>
+        </div>
+    </section>
+    <!--fin section 5-->
+
+    <!--section 6-->
+    <section>
+        <div class="row div1-section6">
+            <div class="d-flex col-4 text-white div2-section6">
+                <h4>ABOUT US</h4>
+                <br>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis in rem, doloremque recusandae
+                    labore ad iste molestiae minus id modi ab voluptate cupiditate. Reiciendis voluptatibus saepe
+                    similique facilis fugit. Ducimus.</p>
+            </div>
+            <div class="d-flex col-4 text-white div2-section6">
+                <h4>INSTAGRAM</h4>
+                <br>
+                <div>
+                    <img src="./images/instragram_gallery_img1.jpg" alt="">
+                    <img src="./images/instragram_gallery_img2.jpg" alt="">
+                    <img src="./images/instragram_gallery_img1.jpg" alt="">
+                    <img src="./images/instragram_gallery_img2.jpg" alt="">
+                </div>
+                <br>
+                <div>
+                    <img src="./images/instragram_gallery_img2.jpg" alt="">
+                    <img src="./images/instragram_gallery_img1.jpg" alt="">
+                    <img src="./images/instragram_gallery_img2.jpg" alt="">
+                    <img src="./images/instragram_gallery_img1.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-4 text-white div-section6">
+                <h4>POPULAR TAGS</h4>
+                <span class="badge badge-pill badge-danger border border-white">Restaurant</span>
+                <span class="badge badge-pill badge-danger border border-white">Responsive design</span>
+                <span class="badge badge-pill badge-danger border border-white">Hotel</span>
+                <br>
+                <span class="badge badge-pill badge-danger border border-white">Blog section</span>
+                <span class="badge badge-pill badge-danger border border-white">SEO</span>
+                <span class="badge badge-pill badge-danger border border-white">Cuisine</span>
+                <br>
+                <span class="badge badge-pill badge-danger border border-white">Graphic</span>
+                <span class="badge badge-pill badge-danger border border-white">Food</span>
+            </div>
+        </div>
+    </section>
+    <!--fin section 6-->
+
+    <!--section 7-->
+    <section class="section7"></section>
+    <!--fin section 7-->
+
+
 
     <!--jquery-->
     <script src="./node_modules/jquery/dist/jquery.js"></script>
