--- a/index.html
+++ b/index.html
@@ -170,20 +170,18 @@
 
     <!--section 5-->
     <section class="section5">
-        <div class="kustify-content-center">
-            <p class="p1-section5"><span> our </span> contact</p>
-        </div>
-        <div class="div1-section5 rounded">
-            <p class="p-section5">lorem lorem lorem lorem lorem lorem lorme lorem lorem lorem lorem lorem lorem lorem
-            </p>
-            <p class="p-section5">+91-9876543510</p>
-            <p class="p-section5">abc@abc.com</p>
+        <p class="p1-section5"><span class="span-section5"> our </span> contact</p>
+        <img src="" alt="">
+        <div class="row div1-section5 rounded">
+            <div class="col-4 div1-in-section5">lorem lorem lorme lorem lorem lorme lorem lorme lorme lorme lorem lorem</div>
+            <div class="col-4 div1-in-section5">0465245421</div>
+            <div class="col-4 div1-in-section5">abc@abc.com</div>
         </div>
     </section>
     <!--fin section 5-->
 
     <!--section 6-->
-    <section>
+    <section class="section6">
         <div class="row div1-section6">
             <div class="d-flex col-4 text-white div2-section6">
                 <h4>ABOUT US</h4>
@@ -191,6 +189,12 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis in rem, doloremque recusandae
                     labore ad iste molestiae minus id modi ab voluptate cupiditate. Reiciendis voluptatibus saepe
                     similique facilis fugit. Ducimus.</p>
+                <div class="d-flex">
+                    <div class="div-logo"></div>
+                    <div class="div-logo"></div>
+                    <div class="div-logo"></div>
+                    <div class="div-logo"></div>
+                </div>
             </div>
             <div class="d-flex col-4 text-white div2-section6">
                 <h4>INSTAGRAM</h4>
@@ -209,7 +213,7 @@
                     <img src="./images/instragram_gallery_img1.jpg" alt="">
                 </div>
             </div>
-            <div class="col-4 text-white div-section6">
+            <div class="col-4 text-white div3-section6">
                 <h4>POPULAR TAGS</h4>
                 <span class="badge badge-pill badge-danger border border-white">Restaurant</span>
                 <span class="badge badge-pill badge-danger border border-white">Responsive design</span>
