--- a/index.html
+++ b/index.html
@@ -111,11 +111,37 @@
         <div class="div1-section1">
             <div class="d-flex div2-section1">
                 <img height="150px" src="./images/box-left-top.png" alt="">
-                <p class="p-section1"><span> our </span> story</p>
-                <img class="img-section1" height="150px" src="./images/box-right-top.png" alt="">
+                <img class="img1-section1" height="150px" src="./images/box-right-top.png" alt="">
             </div>
-            <div>
-
+            <div class="row">
+                <div class="col-3">
+                    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                        <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home"
+                            role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
+                        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile"
+                            role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
+                        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages"
+                            role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+                        <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings"
+                            role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
+                    </div>
+                </div>
+                <div class="col-9">
+                    <div class="tab-content" id="v-pills-tabContent">
+                        <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
+                            aria-labelledby="v-pills-home-tab">test</div>
+                        <div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
+                            aria-labelledby="v-pills-profile-tab">...</div>
+                        <div class="tab-pane fade" id="v-pills-messages" role="tabpanel"
+                            aria-labelledby="v-pills-messages-tab">...</div>
+                        <div class="tab-pane fade" id="v-pills-settings" role="tabpanel"
+                            aria-labelledby="v-pills-settings-tab">...</div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex div2-section1 div2-in-section1">
+                <img height="150px" src="./images/box-bottom-left.png" alt="">
+                <img class="img2-section1" height="150px" src="./images/box-bottom_right.png" alt="">
             </div>
         </div>
     </section>
@@ -123,22 +149,26 @@
 
     <!--section 2-->
     <section class="section2">
-        <div class="d-flex div1-section2">
+        <div class="text-white div1-section2">
+            <p class="p1-section2"><span class="span-section2"> MEET </span>our chef</p>
+            <img height="15px" width="500pxpx" src="./images/decoration_line.png" alt="">
+        </div>
+        <div class="d-flex div2-section2">
             <div class="col-3">
                 <img class="img-section2" src="./images/chef1.png" alt="">
-                <p class="p-section2">lorem ipsum</p>
+                <p class="p2-section2">lorem ipsum</p>
             </div>
             <div class="col-3">
                 <img class="img-section2" src="./images/chef2.png" alt="">
-                <p class="p-section2">lorem ipsum</p>
+                <p class="p2-section2">lorem ipsum</p>
             </div>
             <div class="col-3">
                 <img class="img-section2" src="./images/chef3.png" alt="">
-                <p class="p-section2">lorem ipsum</p>
+                <p class="p2-section2">lorem ipsum</p>
             </div>
             <div class="col-3">
                 <img class="img-section2" src="./images/chef4.png" alt="">
-                <p class="p-section2">lorem ipsum</p>
+                <p class="p2-section2">lorem ipsum</p>
             </div>
         </div>
     </section>
@@ -146,24 +176,51 @@
 
     <!--section 3-->
     <section class="section3">
-        <div class="div1-section3">
+        <div class="div-section3">
+            <div class="d-flex justify-content-center">
+                <img class="img-topleft-section3" src="./images/box-left-top-grey.png" alt="">
+                <p class="p-section3"><span class="span-section3"> BOOK </span>your table</p>
+                <img class="img-topright-section3" src="./images/box-right-top-grey.png" alt="">
+            </div>
+            <div>
+                <p></p>
 
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
         </div>
     </section>
     <!--fin section 3-->
 
     <!--section 4-->
-    <section class="d-flex section4">
-        <div>
-            <p class="p-section4"><span>client </span> testimonials</p>
+    <section class="section4">
+        <div class="div1-section4">
+            <p class="text-white p-section4"><span class="span-section4"> CLIENT </span>testimonials</p>
+            <img src="./images/decoration_line.png" alt="">
         </div>
-        <div class="div-section4 rounded bg-danger">
-            <h3></h3>
-            <h5></h5>
-            <h6></h6>
-        </div>
-        <div>
-
+        <div class="d-flex div2-section4">
+            <div>
+                <img class="img-section4" src="./images/testimonial1.jpg" alt="">
+            </div>
+            <div class="div-txt-section4 text-white">
+                <h3>lorem ipsum</h3>
+                <span class="text-danger">manager</span>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate consequuntur laborum amet
+                    iure ab</p>
+            </div>
+            <div class="div-txt-section4 text-white">
+                <h3>lorem ipsum</h3>
+                <span class="text-danger">manager</span>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate consequuntur laborum amet
+                    iure ab</p>
+            </div>
+            <div>
+                <img class="img-section4" src="./images/testimonial1.jpg" alt="">
+            </div>
         </div>
     </section>
     <!--fin section 4-->
@@ -171,11 +228,20 @@
     <!--section 5-->
     <section class="section5">
         <p class="p1-section5"><span class="span-section5"> our </span> contact</p>
-        <img src="" alt="">
-        <div class="row div1-section5 rounded">
-            <div class="col-4 div1-in-section5">lorem lorem lorme lorem lorem lorme lorem lorme lorme lorme lorem lorem</div>
-            <div class="col-4 div1-in-section5">0465245421</div>
-            <div class="col-4 div1-in-section5">abc@abc.com</div>
+        <img src="./images/decoration_line.png" alt="">
+        <div class="row div1-section5">
+            <div class="col-4 div1-in-section5">
+                <img height="40px" width="40px" src="./images/logo.png" alt="">
+                Lorem
+            </div>
+            <div class="col-4 div1-in-section5">
+                <img height="40px" width="40px" src="./images/logo.png" alt="">
+                0465245421
+            </div>
+            <div class="col-4 div1-in-section5">
+                <img height="40px" width="40px" src="./images/logo.png" alt="">
+                abc@abc.com
+            </div>
         </div>
     </section>
     <!--fin section 5-->
